# next-gen-rendering

./: CMakeLists.txt
code/: ngr_api.hpp
code/vulkan/: buffer.cpp  core.hpp  device.cpp  driver.cpp  framebuffer.cpp  hardware_device.cpp  queue.cpp  render_pass.cpp  shader.cpp  swapchain.cpp  switch.cpp  texture.cpp  win_link.cpp
